--- a/Shellhack/Shellhack/Storyboards/TabBar.storyboard
+++ b/Shellhack/Shellhack/Storyboards/TabBar.storyboard
@@ -17,6 +17,8 @@
                     </tabBar>
                     <connections>
                         <segue destination="dSQ-yI-fqK" kind="relationship" relationship="viewControllers" id="fP0-iN-dFg"/>
+                        <segue destination="BNF-3p-l4U" kind="relationship" relationship="viewControllers" id="0oc-2n-Xby"/>
+                        <segue destination="dZ3-Yd-mXQ" kind="relationship" relationship="viewControllers" id="ZfR-TG-rOx"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kv0-WZ-Zhv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -32,6 +34,26 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="i3T-Mz-6X4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1375" y="565"/>
+        </scene>
+        <!--Homepage-->
+        <scene sceneID="Fyf-Rv-tgt">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Homepage" id="BNF-3p-l4U" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="rib-bX-uC0"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="K1I-3m-mze" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-685" y="585"/>
+        </scene>
+        <!--Newpost-->
+        <scene sceneID="kzW-UR-UKg">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Newpost" id="dZ3-Yd-mXQ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="Xq1-oh-EXK"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GJu-4M-Uef" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-42" y="565"/>
         </scene>
     </scenes>
 </document>
